--- a/requirements.txt
+++ b/requirements.txt
@@ -9,11 +9,17 @@ ecdsa==0.19.0
 fastapi==0.115.4
 greenlet==3.1.1
 h11==0.14.0
+httpcore==1.0.6
+httpx==0.27.2
 idna==3.10
+iniconfig==2.0.0
+packaging==24.2
 passlib==1.7.4
+pluggy==1.5.0
 pyasn1==0.6.1
 pydantic==2.9.2
 pydantic_core==2.23.4
+pytest==8.3.3
 python-jose==3.3.0
 python-multipart==0.0.17
 requests==2.32.3
